# FlowEntropy

./: CMakeLists.txt
Flow2Entropy/: Flow2Entropy.vcproj  Flow2Entropy_main.cpp
FlowDiffusionCudaLib/: CMakeLists.txt  EntropyFieldOnSparseHistogram_cuda.cu  EntropyFieldPerScanline_cuda.cu  EntropyFieldSortPerVoxel_cuda.cu  EntropyFieldWithMarginalHistogram_cuda.cu  EntropyFieldWithSortingInVectors_cuda.cu  EntropyFieldWithSorting_cuda.cu  EntropyField_cuda.cu  EntropyField_host.cu  EntropyField_kernel.cu  FlowDiffusion.cu  FlowDiffusion.cudafe1.stub.h  FlowDiffusion.h  FlowDiffusion2D_kernel.cu  FlowDiffusion3D_kernel.cu  FlowDiffusionCudaLib.vcproj  FlowDiffusion_cuda.h
FlowDiffusionGLSLLib/: FlowDiffusionGLSLLib.cpp  FlowDiffusionGLSLLib.h  FlowDiffusionGLSLLib.vcproj  diffusion.frag
FlowEntropy/: FlowEntropy.sln
FlowEntropy/FlowEntropy/: FlowEntropy.vcproj
FlowEntropyViewer/: CMakeLists.txt  FlowEntropyViewer.vcproj  FlowEntropyViewerWin.cpp  FlowEntropyViewerWin.h  FlowEntropyViewer_main.cpp  FlowEntropyWin_SphericalHistogram.cpp  SortSlab_cuda.cu  SortSlab_cuda.h  Streamline.cpp  Streamline.h  basin.vtk  importance_culling.frag  importance_filling.frag  line_drawing.geom  line_illumination.vert  ray_integral.frag  spherical_histogram.geom  spherical_histogram.vert
StreamlineEntropy/: StreamlineEntropy.vcproj  StreamlineEntropy_main.cpp
entropy_2D/OSUFlow_sequential/: CurvilinearGrid.C  OSUFlow.C  OSUFlow.h  Topology.C  VectorMatrix.C  entropy.C  entropy.h  gldraw.C
entropy_2D/myinterface2D/: FlowDiffusion2DConfig.h  myinterface2D.vcproj
entropy_3D/OSUFlow_sequential/: Interpolator.C  IsoSurf.C  IsoSurf.h  OSUFlow.C  Plot3DReader.C  Rake.C  Solution.C  StreakLine.C  Streamline.C  TimeVaryingFieldLine.C  calc_subvolume.C  calc_subvolume.h  entropy.C  entropy.h  gldraw.C  polynomials.h  triangulator.h
entropy_3D/myinterface3D/: FlowDiffusion3DConfig.h  myinterface3D.vcproj
entropy_final_2D/OSUFlow_sequential/:  _Minibuf-1_  CandidateCP.h  CurvilinearGrid.C  CurvilinearGrid.h  Element.C  Grid.C  Interpolator.h  Lattice.h  Plot3DReader.h  TimeLine.C  definition.h  entropy.C  entropy.h  gldraw.C  gldraw2.C  gldraw3.C
entropy_final_2D/myinterface/: FlowDiffusion2DConfig.h  FlowFusion.cu.cpp  FlowFusion.cudafe1.c  FlowFusion.cudafe1.cpp  FlowFusion.cudafe1.stub.c  FlowFusion.cudafe1.stub.h  FlowFusion.fatbin.c  myinterface.c  myinterface.vcproj  myinterface2D.vcproj
entropy_final_3D/OSUFlow_sequential/: CMakeLists.txt  Field.C  FieldLine.C  Grid.h  Lattice.C  OSUFlowEntropy.h  PathLine.C  Rake.h  VectorMatrix.h  entropy.C  entropy.h  gldraw.C  gldraw_back_nov_20.C  header.h  patch.txt  triangulator.C
entropy_final_3D/myinterface/: FlowDiffusion.h  FlowDiffusion3DConfig.h  FlowDiffusionCuda.h  FlowFusion.cu.cpp  FlowFusion.cudafe1.c  FlowFusion.cudafe1.cpp  FlowFusion.cudafe1.stub.c  FlowFusion.cudafe1.stub.h  FlowFusion.cudafe2.c  FlowFusion.cudafe2.stub.c  FlowFusion.fatbin.c  StdAfx.cpp  StdAfx.h  myinterface.sln  myinterface.vcproj  myinterface3D.vcproj  run_test.bat
flow_entropy/: argus_apply_spectral_analysis_to_graph.m  argus_create_graph.m  argus_partition_graph.m  argus_plot_graph_by_mds.m  func_build_block_based_graph.m  func_comp_block_based_node_bboxs.m  func_comp_laplacian_eigen.m  func_place_random_streamlines.m  func_plot_nodes.m  func_read_graph_from_csv.m  func_read_vec.m  func_read_vec_2D.m  func_spectral_clustering.m  func_write_part.m  script_apply_spectral_analysis_to_graph.m  script_create_graph.m  script_partition_graph.m  script_plot_graph_by_mds.m  script_plot_graph_with_streamlines.m  spooky2_apply_spectral_analysis_to_graph.m  spooky2_create_graph.m  spooky2_partition_graph.m  spooky2_plot_graph_by_mds.m  spooky2_plot_graph_with_streamlines.m  toshiba_create_graph.m  toshiba_partition_graph.m
